fixes, batching, more rewrite work